# whisper-rs

./: .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: pr.yml
examples/: audio_transcription.rs  basic_use.rs
examples/examples_common/: Cargo.toml
examples/examples_common/src/: lib.rs
examples/full_usage/: Cargo.toml
examples/full_usage/src/: main.rs
examples/openvino_usage/: Cargo.toml  README.md
examples/openvino_usage/src/: main.rs
examples/stream/: Cargo.toml
examples/stream/src/: main.rs
patches/: abort-callback.patch  safe-segment-callback-lossy.patch  safe-segment-callback.patch  utf8-segment.patch
src/: common_logging.rs  error.rs  ggml_logging_hook.rs  lib.rs  standalone.rs  utilities.rs  vulkan.rs  whisper_ctx.rs  whisper_ctx_wrapper.rs  whisper_grammar.rs  whisper_logging_hook.rs  whisper_params.rs  whisper_state.rs  whisper_sys_log.rs  whisper_sys_tracing.rs
sys/: Cargo.toml  build.rs  wrapper.h
sys/src/: bindings.rs
