[workspace]
members = ["sys"]
exclude = ["examples/full_usage"]

[package]
name = "whisper-rs"
version = "0.9.0-rc.1"
edition = "2021"
description = "Rust bindings for whisper.cpp"
license = "Unlicense"
documentation = "https://docs.rs/whisper-rs"
repository = "https://github.com/tazz4843/whisper-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-rs-sys = { path = "sys", version = "0.6" }

[dev-dependencies]
hound = "3.5.0"

[features]
default = []

simd = []
coreml = ["whisper-rs-sys/coreml"]
cuda = ["whisper-rs-sys/cuda"]
opencl = ["whisper-rs-sys/opencl"]
test-with-tiny-model = []

[package.metadata.docs.rs]
features = ["simd"]
