[package]
name = "whisper-rs-sys"
version = "0.11.0"
edition = "2021"
description = "Rust bindings for whisper.cpp (FFI bindings)"
license = "Unlicense"
documentation = "https://docs.rs/whisper-rs-sys"
repository = "https://github.com/tazz4843/whisper-rs"
links = "whisper"
include = [
    "whisper.cpp/bindings/javascript/package-tmpl.json",
    "whisper.cpp/bindings/CMakeLists.txt",
    "whisper.cpp/CMakeLists.txt",
    "whisper.cpp/cmake",
    "whisper.cpp/src/coreml",
    "whisper.cpp/src/CMakeLists.txt",
    "whisper.cpp/src/whisper.cpp",
    "whisper.cpp/include/whisper.h",
    "whisper.cpp/ggml/src/ggml.c",
    "whisper.cpp/ggml/src/ggml-alloc.c",
    "whisper.cpp/ggml/src/ggml-backend.c",
    "whisper.cpp/ggml/src/ggml-cuda.cu",
    "whisper.cpp/ggml/src/ggml-impl.h",
    "whisper.cpp/ggml/src/ggml-metal.m",
    "whisper.cpp/ggml/src/ggml-metal.metal",
    "whisper.cpp/ggml/src/ggml-quants.h",
    "whisper.cpp/ggml/src/ggml-quants.c",
    "whisper.cpp/ggml/include/ggml.h",
    "whisper.cpp/ggml/include/ggml-alloc.h",
    "whisper.cpp/ggml/include/ggml-backend.h",
    "whisper.cpp/ggml/include/ggml-backend-impl.h",
    "whisper.cpp/ggml/include/ggml-cuda.h",
    "whisper.cpp/ggml/include/ggml-metal.h",
    "whisper.cpp/LICENSE",
    "src/*.rs",
    "build.rs",
    "wrapper.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
coreml = []
cuda = []
hipblas = []
openblas = []
metal = []
vulkan = []
force-debug = []
openmp = []

[build-dependencies]
cmake = "0.1"
bindgen = "0.69"
cfg-if = "1"
fs_extra = "1.3"
