[package]
name = "whisper-rs-sys"
version = "0.11.0"
edition = "2021"
description = "Rust bindings for whisper.cpp (FFI bindings)"
license = "Unlicense"
documentation = "https://docs.rs/whisper-rs-sys"
repository = "https://github.com/tazz4843/whisper-rs"
links = "whisper"
include = [
	"whisper.cpp/bindings/javascript/package-tmpl.json",
	"whisper.cpp/bindings/CMakeLists.txt",
	"whisper.cpp/CMakeLists.txt",
	"whisper.cpp/cmake",
	"whisper.cpp/src/coreml",
	"whisper.cpp/src/openvino",
	"whisper.cpp/src/CMakeLists.txt",
	"whisper.cpp/src/whisper.cpp",
	"whisper.cpp/src/ggml-cpu-impl.h",
	"whisper.cpp/include/whisper.h",
	"whisper.cpp/ggml/cmake",
	"whisper.cpp/ggml/CMakeLists.txt",
	"whisper.cpp/ggml/src/CMakeLists.txt",
	"whisper.cpp/ggml/src/*.c",
	"whisper.cpp/ggml/src/*.h",
	"whisper.cpp/ggml/src/*.cpp",
	"whisper.cpp/ggml/src/*.cu",
	"whisper.cpp/ggml/src/*.m",
	"whisper.cpp/ggml/src/*.metal",
	"whisper.cpp/ggml/src/ggml-amx/*",
	"whisper.cpp/ggml/src/ggml-cann/*",
	"whisper.cpp/ggml/src/ggml-cuda/*",
	"whisper.cpp/ggml/src/ggml-sycl/*",
	"whisper.cpp/ggml/src/kompute-shaders/*",
	"whisper.cpp/ggml/src/vulkan-shaders/*",
	"whisper.cpp/ggml/include/*.h",
	"whisper.cpp/LICENSE",
	"src/*.rs",
	"build.rs",
	"wrapper.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
coreml = []
cuda = []
hipblas = []
openblas = []
metal = []
vulkan = []
force-debug = []
openmp = []

[build-dependencies]
cmake = "0.1"
bindgen = "0.69"
cfg-if = "1"
fs_extra = "1.3"
